mirui-macros/tests/ui/on_qualified_path.stderr
error: qualified `on Path::EventKind` is reserved for a later release; use unqualified `on EventKind` for now
  --> tests/ui/on_qualified_path.rs:17:23
   |
17 |         View () {} on Slider::ValueChanged { todo!() }
   |                       ^^^^^^
